Dragon - fixed chinese code issue.

--- a/Dragon/src/main/resources/ApplicationResources_zh_CN.properties
+++ b/Dragon/src/main/resources/ApplicationResources_zh_CN.properties
@@ -1,14 +1,35 @@
+
 webapp.name=Pagoda 管理系统
 
 # date formatter
 date.format=yyyy-MM-dd
 datetime.format=yyyy-MM-dd HH:mm:ss
 
+# start global res
 
+global.title.confirmClose=关闭当前窗口
+global.message.confirmClose=你确定要关闭当前窗口吗?
+
+global.button.save=保存
+global.button.cancel=取消
+global.button.update=更新
+global.button.delete=删除
+global.button.enable=标记为可用
+global.button.disable=标记为不可用
+
+global.field.createDate=创建时间
+global.field.lastUpdateDate=最后更新时间
+global.field.creator=创建人
+global.field.lastUpdater=最后更新人
+
+global.exception.title=远程异常
+global.exception.message=出错了,请联系管理员.
+# end global res
 
 # start user role res
 userRole.field.username=用户名
 userRole.field.password=密码
+userRole.field.confirmPassword=确认密码
 userRole.field.firstName=姓
 userRole.field.lastName=名
 userRole.field.fullName=姓名
@@ -17,11 +38,30 @@ userRole.field.telephone=手机号码
 userRole.field.telephone2=备用手机号码
 userRole.field.passwordHint=密码提示
 userRole.field.status=状态
-userRole.field.enabled=是否可用
+userRole.field.enabled=可用?
+userRole.field.disabled=不可用?
 
-userRole.title.createUser=Create New User
-userRole.title.updateUser=Update User
-userRole.title.deleteUser=Delete User
-userRole.title.disableUser=Disable User
-userRole.title.enableUser=Enable User
+userRole.title.createUser=创建新用户
+userRole.title.updateUser=更新用户
+userRole.title.deleteUser=删除用户
+userRole.title.disableUser=标记用户可用
+userRole.title.enableUser=标记用户不可用
+
+userRole.error.newPasswordNotMatch=密码不匹配
 # end user role res
+
+
+# start account res
+account.field.username=账号
+account.field.password=账号密码
+account.field.accountLevel=账号等级
+account.field.categoryType=所属平台
+account.field.locked=账号是否已被锁
+account.field.disabledDescription=不可用原因
+
+account.title.createAccount=创建账号
+account.title.updateAccount=更新账号
+account.title.deleteAccount=删除账号
+
+account.message.deleteAccount=你确定要删除该账号吗?
+# end account res
